--- a/IoT-Smart-Parking-System/platformio.ini
+++ b/IoT-Smart-Parking-System/platformio.ini
@@ -12,3 +12,7 @@
 platform = espressif32
 board = heltec_wifi_lora_32_V3
 framework = arduino
+lib_deps = 
+	pololu/VL53L0X@^1.3.1
+	adafruit/Adafruit_VL53L0X@^1.2.4
+monitor_speed = 115200
