--- a/IoT-Smart-Parking-System/platformio.ini
+++ b/IoT-Smart-Parking-System/platformio.ini
@@ -14,4 +14,6 @@ board = heltec_wifi_lora_32_V3
 framework = arduino
 lib_deps = 
 	adafruit/Adafruit_VL53L0X@^1.2.4
+	knolleary/PubSubClient@^2.8
 monitor_speed = 115200
+build_flags = -DDEBUG_MODE
