--- a/IoT-Smart-Parking-System/platformio.ini
+++ b/IoT-Smart-Parking-System/platformio.ini
@@ -15,5 +15,6 @@ framework = arduino
 lib_deps = 
 	adafruit/Adafruit_VL53L0X@^1.2.4
 	knolleary/PubSubClient@^2.8
+	arduino-libraries/NTPClient@^3.2.1
 monitor_speed = 115200
 build_flags = -DDEBUG_MODE
