Update Config.h for testing

--- a/IoT-Smart-Parking-System/platformio.ini
+++ b/IoT-Smart-Parking-System/platformio.ini
@@ -16,5 +16,6 @@ lib_deps =
 	adafruit/Adafruit_VL53L0X@^1.2.4
 	arduino-libraries/NTPClient@^3.2.1
 	bblanchon/ArduinoJson@^7.4.1
+	knolleary/PubSubClient@^2.8
 monitor_speed = 115200
 build_flags = -DDEBUG_MODE
