--- a/IoT-Smart-Parking-System/platformio.ini
+++ b/IoT-Smart-Parking-System/platformio.ini
@@ -18,4 +18,4 @@ lib_deps =
 	bblanchon/ArduinoJson@^7.4.1
 	knolleary/PubSubClient@^2.8
 monitor_speed = 115200
-build_flags = -DDEBUG_MODE
+; build_flags = -DDEBUG_MODE
