--- a/IoT-Smart-Parking-System/platformio.ini
+++ b/IoT-Smart-Parking-System/platformio.ini
@@ -17,5 +17,7 @@ lib_deps =
 	arduino-libraries/NTPClient@^3.2.1
 	bblanchon/ArduinoJson@^7.4.1
 	knolleary/PubSubClient@^2.8
+	jgromes/RadioLib@^7.1.2
+	ropg/LoRaWAN_ESP32@^1.2.0
+	jgromes/RadioBoards@^1.0.0
 monitor_speed = 115200
-; build_flags = -DDEBUG_MODE
